[package]
name = "midi-synth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cpal = "0.16.0"
dasp_sample = "0.11.0"
eframe = "0.33.2"
egui = "0.33.2"
egui_plot = "0.34.0"
fundsp = "0.20.0"
midi-msg = "0.8.1"
midir = "0.10.3"
read_input = "0.8.6"
ringbuffer = "0.16.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
